; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/atheros/extr_ar724x_pci.c_ar724x_pci_write_ivar.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/atheros/extr_ar724x_pci.c_ar724x_pci_write_ivar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar71xx_pci_softc = type { i64 }

@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i64)* @ar724x_pci_write_ivar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar724x_pci_write_ivar(i32 %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca %struct.ar71xx_pci_softc*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call %struct.ar71xx_pci_softc* @device_get_softc(i32 %11)
  store %struct.ar71xx_pci_softc* %12, %struct.ar71xx_pci_softc** %10, align 8
  %13 = load i32, i32* %8, align 4
  switch i32 %13, label %18 [
    i32 128, label %14
  ]

14:                                               ; preds = %4
  %15 = load i64, i64* %9, align 8
  %16 = load %struct.ar71xx_pci_softc*, %struct.ar71xx_pci_softc** %10, align 8
  %17 = getelementptr inbounds %struct.ar71xx_pci_softc, %struct.ar71xx_pci_softc* %16, i32 0, i32 0
  store i64 %15, i64* %17, align 8
  store i32 0, i32* %5, align 4
  br label %20

18:                                               ; preds = %4
  %19 = load i32, i32* @ENOENT, align 4
  store i32 %19, i32* %5, align 4
  br label %20

20:                                               ; preds = %18, %14
  %21 = load i32, i32* %5, align 4
  ret i32 %21
}

declare dso_local %struct.ar71xx_pci_softc* @device_get_softc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
